Examples/09.kubernetes_deployment_wp/test-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wordpress-deployment
  namespace: apps
  labels:
    k8s-app: wordpress
spec:
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: wordpress
    spec:
      containers:
        - name: wordpress
          image: wordpress:4.9.1-php5.6-apache
          ports:
            - name: http
              containerPort: 80
