Examples/09.kubernetes_deployment_wp/test-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: wordpress-service
  namespace: apps
spec:
  selector:
    k8s-app: wordpress
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 32010
  type: NodePort
