Examples/09.kubernetes_deployment_wp/test-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: apps
  annotations:
    kubernetes.io/ingress.class: "tectonic"
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/use-port-in-redirects: "true"
spec:
  rules:
    - host: kube.northeurope.cloudapp.azure.com
      http:
        paths:
          - path: /wordpress
            backend:
              serviceName: wordpress-service
              servicePort: 80
